Let PendingBookmarkAppManager override uninstalls

Prior to this commit, the PBAM would skip installing an app that the
user had previously, explicitly uninstalled. The theory being that PBAM
was usually invoked by implicit installation (e.g. default-installed or
policy-installed apps), and explicit user action should trump implicit
action. Furthermore, the implicit installation was often run many times,
e.g. on every Chrome OS login, and when a user uninstalls such an app,
it should not be magically re-installed the next time they log in.

Some PBAM users (Android SMS) install an app infrequently, such as on
first login and on triggering re-installation via settings. The latter
are also due to explicit user action, rather than being an implicit
ambient install. Such installation attempts should be able to override a
user's previous uninstallation.

Bug: 886146
Change-Id: I83db7db22c6ac7233774d13e0d680c4ba2c762de
Reviewed-on: https://chromium-review.googlesource.com/1235254
Commit-Queue: Nigel Tao <nigeltao@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594188}
Former-commit-id: a9605dfdfbce570599f30366db8139befe80b323