chrome/browser/chromeos/multidevice_setup/android_sms_app_helper_delegate_impl.cc
@@ -45,7 +45,9 @@ void AndroidSmsAppHelperDelegateImpl::InstallAndroidSmsApp(
       web_app::PendingAppManager::AppInfo(
           chromeos::android_sms::GetAndroidMessagesURLWithExperiments(),
           web_app::PendingAppManager::LaunchContainer::kWindow,
-          web_app::PendingAppManager::InstallSource::kInternal),
+          web_app::PendingAppManager::InstallSource::kInternal,
+          web_app::PendingAppManager::AppInfo::kDefaultCreateShortcuts,
+          true),  // override_previous_user_uninstall
       base::BindOnce(&AndroidSmsAppHelperDelegateImpl::OnAppInstalled,
                      weak_ptr_factory_.GetWeakPtr(), launch_on_install));
 }
