chrome/browser/web_applications/components/pending_app_manager.h
@@ -96,10 +96,15 @@ class PendingAppManager {
   };
 
   struct AppInfo {
+    static const bool kDefaultCreateShortcuts;
+    static const bool kDefaultOverridePreviousUserUninstall;
+
     AppInfo(GURL url,
             LaunchContainer launch_container,
             InstallSource install_source,
-            bool create_shortcuts = true);
+            bool create_shortcuts = kDefaultCreateShortcuts,
+            bool override_previous_user_uninstall =
+                kDefaultOverridePreviousUserUninstall);
     AppInfo(AppInfo&& other);
     ~AppInfo();
 
@@ -111,6 +116,7 @@ class PendingAppManager {
     const LaunchContainer launch_container;
     const InstallSource install_source;
     const bool create_shortcuts;
+    const bool override_previous_user_uninstall;
 
    private:
     DISALLOW_COPY_AND_ASSIGN(AppInfo);
